* Added bulk delete of stylesheets
* Added internal pretty url handling mechanism.  It's
going to be turned off on upgrades, but on with new
installs.  Make sure the {metadata} tag is in your template
if you plan on using it.
* Added hierarchical url handling as well on the interal
mechanism.  You especially want the {metadata} tag with
this option.  It's on in new installs.
* Fixed bug where default template could be set inactive
* Fixed bug where an inactive template set to default would
not be made active automatically
* Modified config.php file so that it explains what the
different options are

Version 0.12.1 "Savusavu" -- Mar 25 2006
-----------------

* Added check if setting inactive page to the 
default, it automatically makes it active
* Added assign parameter to content tag, which will assign
the output to a smarty parameter and can then be tested
properly for existing output
* Added ability to delete/active/inactive multiple pages 
* Added handling of target parameter to Menu Manager
* Added ordering of stylesheets so that they're displayed in
the order they're attached to the template
* Added permissions to Menu Manager
* Added entity escaping to title and breadcrumbs plugins
* Added changes to bulletmenu-accessible.tpl by nils73
* Default persistent_db_conn setting is now false
* Changed page alias replacement to allow for hyphens
* Fixed issue with FCKeditorX where it wasn't changing the
protocol automatically on the insert link page
* Fixed cms_selflink so next/previous links respect the
show in menu flag
* Fixed length on template name in template copy command
* Fixed link at bottom of admin log
* Changed {$title} to {title} in new template page
* Fixed a reference bug in the content class
* Fixed the help of the image tag to be src, not name
* Fixed several bugs with Menu Manager in handling of
depths
* Fixed an issue with links not having a proper returnid
when using the News content type
* Made title in user defined tags clickable to edit it
